[skip ci] Fixed lnks

--- a/app/views/contractors/new.html.erb
+++ b/app/views/contractors/new.html.erb
@@ -4,7 +4,7 @@
       <div class="page-title-container">
         <h1 class="page-title">
           <span class="nc-min-icon nc-min-recruiters"></span>
-          <span>Cadastro do contratantes</span>
+          <span>Cadastro do contratante</span>
         </h1>
       </div>
 
