[skip ci] Fixeds

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -140,7 +140,7 @@
       <div class="col-6 col-right padding-left">
         <%= form_for @candidate, :class => 'form-curriculo' do |f| %>
           <fieldset>
-            <legend class="page-caption">Objetivos Profissionais</legend>
+            <legend class="page-caption">Objetivo Profissional</legend>
 
             <div class="form-input">
               <%= f.label :position_of_interest, "Objetivo ou cargo de interesse" %>
@@ -179,7 +179,7 @@
 
               <div class="col-6 col-right padding-small-left">
                 <div class="form-input">
-                  <%= f.label :salary_pretension, "Pretençào salarial" %>
+                  <%= f.label :salary_pretension, "Pretenção salarial" %>
                   <%= f.text_field :salary_pretension, :class => "money" %>
                 </div>
               </div>
@@ -537,7 +537,7 @@
         <div class="page-slogan margin-bottom">
           <div class="page-slogan-text">
             <p>
-              Muito bem, seu curriculo esta quase pronto! <br>
+              Muito bem, seu currículo esta quase pronto! <br>
               Basta apenas concluir clicando no botão abaixo para <br>
               poder usufruir livremente de nossos serviços, mas <br>
               porque pagar com um post?
