--- a/app/views/company/show.html.erb
+++ b/app/views/company/show.html.erb
@@ -13,7 +13,7 @@
           <span class="page-caption">Dados da Empresa</span>
 
           <div class="form-input">
-            <%= f.label :fancy_name, "Nome fanstasia" %>
+            <%= f.label :fancy_name, "Nome fantasia" %>
             <%= f.text_field :fancy_name, :required => true %>
           </div>
 
