--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,24 +51,47 @@
       <div class="clip">
         <ul data-value="9" class="vacancies-list">
           <% @jobs.each do |job| %>
-          <% premiun = job.job_premiun.try(:validate_date) ? "vacancies-premium" : "" %>
-          <li class="vacancies-item <%= premiun %>">
-            <section>
-              <%= link_to show_job_path(job.slug), :class => "vacancies-link" do %>
-                <h2 class="vacancies-category"><%= job.job_category.name %></h2>
-                <h1 class="vacancies-title"><%= job.job_title %></h1>
-                <p class="vacancies-enterprise">
-                  <span class="fa fa-briefcase"></span> <%= job.company.corporate_name %>
-                </p>
-                <p class="vacancies-location">
-                  <span class="fa fa-map-marker"></span> <%= job.city.name %> / <%= job.city.state.iso %>
-                </p>
+              <% if job.job_premiun.try(:validate_date) %>
+                  <li class="vacancies-item vacancies-premium">
+                    <section>
+                      <%= link_to show_job_path(job.slug), :class => "vacancies-link" do %>
+                        <h2 class="vacancies-category"><%= job.job_category.name %></h2>
+                        <h1 class="vacancies-title"><%= job.job_title %></h1>
+                        <p class="vacancies-enterprise">
+                          <span class="fa fa-briefcase"></span> <%= job.company.corporate_name %>
+                        </p>
+                        <p class="vacancies-location">
+                          <span class="fa fa-map-marker"></span> <%= job.city.name %> / <%= job.city.state.iso %>
+                        </p>
+                      <% end %>
+                      <a class="vacancies-social" href="#">
+                        <span class="fa fa-facebook-square"></span> Recomendar vaga
+                      </a>
+                    </section>
+                  </li>
               <% end %>
-              <a class="vacancies-social" href="#">
-                <span class="fa fa-facebook-square"></span> Recomendar vaga
-              </a>
-            </section>
-          </li>
+          <% end %>
+
+          <% @jobs.each do |job| %>
+              <% if !job.job_premiun.try(:validate_date) %>
+                  <li class="vacancies-item">
+                    <section>
+                      <%= link_to show_job_path(job.slug), :class => "vacancies-link" do %>
+                          <h2 class="vacancies-category"><%= job.job_category.name %></h2>
+                          <h1 class="vacancies-title"><%= job.job_title %></h1>
+                          <p class="vacancies-enterprise">
+                            <span class="fa fa-briefcase"></span> <%= job.company.corporate_name %>
+                          </p>
+                          <p class="vacancies-location">
+                            <span class="fa fa-map-marker"></span> <%= job.city.name %> / <%= job.city.state.iso %>
+                          </p>
+                      <% end %>
+                      <a class="vacancies-social" href="#">
+                        <span class="fa fa-facebook-square"></span> Recomendar vaga
+                      </a>
+                    </section>
+                  </li>
+              <% end %>
           <% end %>
         </ul>
       </div>
