--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,7 +50,7 @@
     <div class="grid">
       <div class="clip">
         <ul data-value="9" class="vacancies-list">
-          <% @jobs.each do |job| %>
+          <% @jobs.sample(12).each do |job| %>
               <% if job.job_premiun.try(:validate_date) %>
                   <li class="vacancies-item vacancies-premium">
                     <section>
