--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -54,6 +54,12 @@
       </div>
 
       <div class="col-8 col-right padding-left">
+        <% if !current_user.candidate.share_facebook %>
+        <p class="text-center information">
+          <strong>Atenção</strong>: Para se candidatar a esta vaga você deve, obrigatoriamente, compartilhar o post no facebook. Clique no botão abaixo e pague com um post.<br/><br/>
+          <iframe src="http://www.paywithapost.de/dlbutton02.php?id=2fdf2fe8-0403-4554-8c85-a3e7bea5614d" class="spaced-right" name="paytweet_button" scrolling="no" frameborder="no" height="24px" width="240px"></iframe><br/><br/>
+        </p>
+        <% end %>
         <article class="vacancy">
           <div class="vacancy-header margin-bottom">
             <figure class="vacancy-avatar">
@@ -150,6 +156,7 @@
             <% end %>
           </div>
 
+          <% if current_user.candidate.share_facebook %>
           <div class="vacancy-options">
             <% if current_user.is_candidate && @job.finish_date >= Time.now %>
               <% if @job.candidate_to_job?(current_user) %>
@@ -162,6 +169,7 @@
               <span class="fa fa-facebook-square"></span> Recomende esta Vaga
             </a>
           </div>
+          <% end %>
         </article>
       </div>
     </div>
