--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,9 @@
     <div id="nav-container">
       <nav id="nav" class="nav-active">
         <ul>
+          <% if current_user.nil? || current_user.is_company? %>
           <li><%= link_to "Vaga Premium", page_path("vaga-premium") %></li>
+          <% end %>
           <% if current_user.nil? %>
           <li><%= link_to "NÃO É CADASTRADO?", page_path('cadastrar'), :class => "btn btn-link"%></li>
           <% end %>
