Removed scrool to list jobs

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,7 +1,7 @@
 <main id="main">
     <div class="grid padding-top">
       <div class="sidebar col-4 col-left">
-        <div class="vacancies vacancies-sidebar scroll nav-active">
+        <div class="vacancies vacancies-sidebar nav-active">
           <ul data-value="3" class="vacancies-list">
             <% cache do %>
             <% @jobs.each do |job|%>
