--- a/app/assets/stylesheets/project/components/vacancies.css.scss
+++ b/app/assets/stylesheets/project/components/vacancies.css.scss
@@ -3,7 +3,7 @@
 */
 
 .vacancies {
-	
+
 }
 
 .vacancies-list {
@@ -53,7 +53,7 @@
 	font-size: 1.3em;
 	font-weight: 400;
 	text-transform: lowercase;
-	
+
 	margin: 0 0 5px;
 	padding-bottom: 5px;
 
@@ -106,7 +106,7 @@
 	width: 100%;
 	height: 30px;
 	line-height: 30px;
-	
+
 	color: $text-5;
 	font-size: 1.3em;
 	text-align: center;
@@ -120,10 +120,10 @@
 .vacancies-sidebar {
 	@include box-sizing(border-box);
 	height: 702px;
-	overflow: hidden;
+	overflow-y: scroll;
 
 	margin: 0 0 20px;
-	
+
 	.btn,
 	.vacancies-list {
 		margin: 0 5px 0 0;
