[skip ci] removed scrool

--- a/app/views/notification_of_apply_for_job_mailer/message_for_company.html.erb
+++ b/app/views/notification_of_apply_for_job_mailer/message_for_company.html.erb
@@ -215,7 +215,7 @@
         <td width="100" valign="center"></td>
         <td width="700" valign="center" align="center">
           <p>
-            <div>Obrigado pela atenção, e um forte abraço. Qualquer dúvida estou à sua disposição.</div>
+            <div>Obrigado pela atenção, e um forte abraço. Qualquer dúvida estamos à sua disposição.</div>
             <div><h2><a href="#">Equipe Nova Currículos</a></h2></div>
           </p>
         </td>
