--- a/app/views/company/show.html.erb
+++ b/app/views/company/show.html.erb
@@ -143,7 +143,7 @@
 
           <div class="form">
             <%= f.label :logo, "Logo Marca" %>
-            <%= f.file_field :logo, :required => true%>
+            <%= f.file_field :logo %>
           </div>
 
         </div>
