--- a/app/views/pages/cadastrar.html.erb
+++ b/app/views/pages/cadastrar.html.erb
@@ -19,7 +19,7 @@
             <span class="nc-icon nc-recruiters"></span>
             <h2 class="featured-title">
               Cadastro de <br>
-              <strong>Recrutadores</strong>
+              <strong>Contratante</strong>
             </h2>
           <% end %>
         </section>
