--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -28,7 +28,7 @@
 
                   <div class="col-3 col-left padding-small-right">
                     <div class="form-input">
-                      <%= f.label :salary_range, "*Faixa salarial" %>
+                      <%= f.label :salary_range, "Faixa salarial" %>
                       <%= f.text_field :salary_range, :class => "money" %>
                     </div>
                   </div>
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="form-textarea">
-                  <%= f.label :description, "Descrição da vaga" %>
+                  <%= f.label :description, "*Descrição da vaga" %>
                   <%= f.text_area :description, :required => true %>
                 </div>
 
@@ -83,18 +83,18 @@
               <div class="col-6 col-right padding-left padding-large-top">
 
                 <div class="form-textarea">
-                  <%= f.label :requirements, "Requerimentos" %>
-                  <%= f.text_area :requirements, :required => true %>
+                  <%= f.label :requirements, "*Requerimentos" %>
+                  <%= f.text_area :requirements, :required => true, :class => "textearea_height_115" %>
                 </div>
 
                 <div class="form-textarea">
                   <%= f.label :period_of_work, "Horário de trabalho" %>
-                  <%= f.text_area :period_of_work %>
+                  <%= f.text_area :period_of_work, :class => "textearea_height_115" %>
                 </div>
 
                 <div class="form-textarea">
                   <%= f.label :other_information, "Outras informações" %>
-                  <%= f.text_area :other_information %>
+                  <%= f.text_area :other_information, :class => "textearea_height_115" %>
                 </div>
               </div>
             </div>
