[skip ci] Fixed

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -105,7 +105,7 @@
                   <div class="page-slogan-text">
                     <p>
                       Deixe sua vaga em evidência entre as primeiras vagas do site,
-                      contrate agora a nossa <%= link_to "Vaga Premium", page_path("vaga-premium") %>.
+                      contrate agora a nossa <%= link_to "Vaga Premium", page_path("vaga-premium"), :target => "_blank"%>.
                     </p>
                   </div>
                 </div>
@@ -122,14 +122,14 @@
 
               <div class="form-radio">
                 <div class="form-radio-item form-inline">
-                  <label for="termos_de_uso">*li e concordo com os <%= link_to "Termos de uso", page_path("temos-de-uso")%></label>
+                  <label for="termos_de_uso">*li e concordo com os <%= link_to "Termos de uso", page_path("temos-de-uso"), :target => "_blank"%></label>
                   <%= f.check_box :term, {:required => true}, "true", "false" %>
                 </div>
               </div>
 
               <div class="form-radio">
                 <div class="form-radio-item form-inline">
-                  <label for="termos_de_uso">Deseja tornar esta vaga Premium? <%= link_to "Saiba Mais", page_path("vaga-premium") %></label>
+                  <label for="termos_de_uso">Deseja tornar esta vaga Premium? <%= link_to "Saiba Mais", page_path("vaga-premium"), :target => "_blank" %></label>
                   <%= f.check_box :is_premium, {}, "true", "false" %>
                 </div>
               </div>
