--- a/app/views/welcome_mailer/welcome_message_company.html.erb
+++ b/app/views/welcome_mailer/welcome_message_company.html.erb
@@ -203,20 +203,19 @@
           <h1>Olá, seja bem vindo(a) <%= @contact.name %></h1>
 
           <p>
-            Desde já, desejamos boa sorte e que encontre seu o seu emprego ideal!
+            Desde já, desejamos boa sorte e que encontre os candidatos ideais.
           </p>
           <p>
             Agora você não precisa mais ficar anexando documentos e outras informações cada
-            vez que se candidata a uma vaga! Para isso, você só precisa completar
-            seu perfil e pode anexar seu currículo e portfólio conosco.
-            Isso vai te ajudar bastante a mostrar seu talento e projetos bacanas para os
-            recrutadores.
+            vez que um candidato se escreve  a uma vaga! Para isso, você só precisa completar
+            o perfil de sua empresa e cadastrar suas vagas. A cada candidado, lhe enviaremos um email confirmando.
+            Todos os candidatos ficarão anexado a vaga.
           </p>
           <p>
             E tudo isso continua gratuito
           </p>
           <p>
-            Recomendamos que você atualize todos os seus dados. Quanto mais informação, mais seu currículo poderá ser visto.
+            Recomendamos que você atualize todos os dados de sua empresa. Quanto mais informação, mais confiabilidade.
           </p>
 
         </td>
