--- a/app/assets/stylesheets/project/messages.css.scss
+++ b/app/assets/stylesheets/project/messages.css.scss
@@ -15,14 +15,14 @@
   border-color: #EBCCD1;
   color: #A94442;
 }
+
 .alert {
+  @include box-sizing(border-box);
+  width: 100%;
   padding: 15px;
   margin: 0 auto;
-  border: 1px solid transparent;
-  border-radius: 4px;
   font-size: 14px;
   text-align: center;
-  width: 97.9%;
   position: absolute;
   z-index: 100;
 }
