Atualizando arquivos para correções na página curriculo

--- a/app/assets/stylesheets/project/components/display.css.scss
+++ b/app/assets/stylesheets/project/components/display.css.scss
@@ -28,6 +28,38 @@
 	max-height: 405px;
 }
 
+.formacoes-academicas-scroll {
+	max-height: 301px;
+
+	ul {
+		min-height: 301px;
+	}
+}
+
+.cursos-e-eventos-scroll {
+	max-height: 203px;
+
+	ul {
+		min-height: 203px;
+	}
+}
+
+.idiomas-scroll {
+	max-height: 125px;
+
+	ul {
+		min-height: 125px;
+	}
+}
+
+.experiencias-profissionais-scroll {
+	max-height: 405px;
+
+	ul {
+		min-height: 405px;
+	}
+}
+
 .display-item {
 	position: relative;
 
