--- a/app/assets/stylesheets/project/button.css.scss
+++ b/app/assets/stylesheets/project/button.css.scss
@@ -103,3 +103,26 @@
 		border-right: solid 1px rgba(#fff, .2);
 	}
 }
+
+
+.btn-paypost {
+	position: relative;
+	text-align: center;
+
+	.btn {
+		cursor: pointer;
+	}
+
+	iframe {
+		position: absolute;
+		top: 1px;
+		left: 50%;
+
+		margin-left: -120px;
+		@include opacity(0);
+	}
+}
+
+.btn-paypost-content {
+	display: inline-block;
+}
