--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -57,7 +57,12 @@
         <% if !current_user.candidate.share_facebook %>
         <p class="text-center information">
           <strong>Atenção</strong>: Para se candidatar a esta vaga você deve, obrigatoriamente, compartilhar o post no facebook. Clique no botão abaixo e pague com um post.<br/><br/>
-          <iframe src="http://www.paywithapost.de/dlbutton02.php?id=2fdf2fe8-0403-4554-8c85-a3e7bea5614d" class="spaced-right" name="paytweet_button" scrolling="no" frameborder="no" height="24px" width="240px"></iframe><br/><br/>
+          <div class="btn-paypost">
+            <div class="btn-paypost-content">
+              <span class="btn btn-facebook"><span class="fa fa-facebook"></span> Pagar com um post no facebook</span>
+              <iframe src="http://www.paywithapost.de/dlbutton02.php?id=2fdf2fe8-0403-4554-8c85-a3e7bea5614d" class="spaced-right" name="paytweet_button" scrolling="no" frameborder="no" height="24px" width="240px"></iframe>
+            </div>
+          </div>
         </p>
         <% end %>
         <article class="vacancy">
