--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -26,22 +26,22 @@
         <div class="margin-bottom">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <div class="form-input form-input-green">
-              <%= f.label :name, :class => "hidden"%>
+              <%= f.label :name, "*Nome" %>
               <%= f.text_field :name, :required => true, autofocus: true, :placeholder => "Nome*", :id => "user_name_r" %>
             </div>
 
             <div class="form-input form-input-green">
-              <%= f.label :email, :class => "hidden"%>
+              <%= f.label :email, "*Email"%>
               <%= f.text_field :email, required: true, autofocus: true, :placeholder => "E-mail*", :id => "user_email_r" %>
             </div>
 
             <div class="form-input form-input-green">
-              <%= f.label :password, :class => "hidden"%>
+              <%= f.label :password, "*Senha"%>
               <%= f.password_field :password, required: true, :placeholder => "senha*", :id => "user_password_r" %>
             </div>
 
             <div class="form-input form-input-green">
-              <%= f.label :password_confirmation, :class => "hidden"%>
+              <%= f.label :password_confirmation, "*Confirmar senha"%>
               <%= f.password_field :password_confirmation, required: true, :placeholder => "Confirmar senha*", :id => "user_password_confirmation_r" %>
             </div>
 
