--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -5,12 +5,12 @@
     <%= form_for(resource, as: resource_name, url: session_path(resource_name), :html=> { class: 'login-form' }) do |f| %>
       <div class="login-input">
         <%= f.label :email, :class => "hidden" %>
-        <%= f.text_field :email, required: false, autofocus: true, :placeholder => "email"  %>
+        <%= f.text_field :email, required: false, autofocus: true, :value => "email"  %>
       </div>
 
       <div class="login-input">
         <%= f.label :password, :class => "hidden" %>
-        <%= f.password_field :password, required: false, :placeholder => "senha" %>
+        <%= f.password_field :password, required: false, :value => "senha" %>
       </div>
 
       <div class="login-submit">
